front-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: kubechiragfront.rtd.squareops.co.in
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: sa-frontend
                port:
                  number: 80
